[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeflow"
version = "0.0.5"
authors = [
  { name="Stoyan Stoyanov"},
]
description = "vibeflow - effortless python functions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai==1.93.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "black==25.1.0",
    "mkdocs-material==9.6.15",
    "mkdocstrings==0.29.1",
    "mkdocstrings-python==1.16.12",
]

[project.urls]
"Homepage" = "https://github.com/stoyan-stoyanov/vibeflow"
"github" = "https://github.com/stoyan-stoyanov/vibeflow"